Storage closing routine was tuned to be more robust and handle exceptions gracefully.