@@ -8,7 +8,10 @@ import com.jetbrains.youtrackdb.api.config.YouTrackDBConfig;
 import com.jetbrains.youtrackdb.internal.common.log.LogManager;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBImpl;
 import com.jetbrains.youtrackdb.internal.core.db.YouTrackDBInternal;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.concurrent.ConcurrentHashMap;
@@ -17,8 +20,12 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import org.apache.commons.configuration2.Configuration;
 import org.apache.tinkerpop.gremlin.structure.Graph;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class YTDBGraphFactory {
+
+  private static final Logger logger = LoggerFactory.getLogger(YTDBGraphFactory.class);
 
   private static final ConcurrentHashMap<Path, YouTrackDBImpl> storagePathYTDBMap = new ConcurrentHashMap<>();
 
@@ -89,26 +96,54 @@ public class YTDBGraphFactory {
 
   public static YouTrackDBImpl ytdbInstance(
       String dbPath, Supplier<YouTrackDBInternal<DatabaseSession>> internalSupplier) {
-    var path = Path.of(dbPath).toAbsolutePath().normalize();
+    var path = Paths.get(dbPath);
+    try {
+      Files.createDirectories(path);
+      path = path.toRealPath();
+    } catch (IOException e) {
+      logger.error("Can not retrieve real path for {}", dbPath, e);
+      path = path.toAbsolutePath().normalize();
+    }
+
     return storagePathYTDBMap.compute(path, (p, youTrackDB) -> {
-      if (youTrackDB != null) {
+      if (youTrackDB != null && youTrackDB.isOpen()) {
         return youTrackDB;
       }
 
       return new YouTrackDBImpl(internalSupplier.get());
     });
+
   }
 
   @Nullable
   public static YouTrackDB getYTDBInstance(String dbPath) {
-    var path = Path.of(dbPath).toAbsolutePath().normalize();
-    return storagePathYTDBMap.get(path);
+    var path = Path.of(dbPath);
+    try {
+      path = path.toRealPath();
+    } catch (IOException e) {
+      logger.error("Can not retrieve real path for {}", dbPath, e);
+      path = path.toAbsolutePath().normalize();
+    }
+
+    var ytdb = storagePathYTDBMap.get(path);
+    if (ytdb == null || !ytdb.isOpen()) {
+      return null;
+    }
+
+    return ytdb;
+
   }
 
   public static void unregisterYTDBInstance(@Nonnull YouTrackDBImpl youTrackDB,
       @Nullable Runnable onCloseCallback) {
     var ytdbInternal = youTrackDB.internal;
-    var path = Path.of(ytdbInternal.getBasePath()).toAbsolutePath().normalize();
+    var path = Paths.get(ytdbInternal.getBasePath());
+    try {
+      path = path.toRealPath();
+    } catch (IOException e) {
+      logger.error("Can not retrieve real path for {}", path, e);
+      path = path.toAbsolutePath().normalize();
+    }
 
     storagePathYTDBMap.compute(path, (p, ytdb) -> {
       if (ytdb == youTrackDB) {
@@ -117,9 +152,10 @@ public class YTDBGraphFactory {
         }
 
         return null;
+      } else {
+        throw new IllegalStateException(
+            "There is another YTDB instance registered for the same path: " + p);
       }
-
-      return ytdb;
     });
   }
 
@@ -127,8 +163,10 @@ public class YTDBGraphFactory {
     var ytdbs = new HashMap<>(storagePathYTDBMap);
     ytdbs.values().forEach(ytdb -> {
       try {
-        //will be removed from storagePathYTDBMap in [unregisterYTDBInstance]
-        ytdb.close();
+        if (ytdb.isOpen()) {
+          //will be removed from storagePathYTDBMap in [unregisterYTDBInstance]
+          ytdb.close();
+        }
       } catch (Exception e) {
         LogManager.instance()
             .error(YTDBGraphFactory.class, "Error closing of YouTrackDB instance", e);
